@@ -2,6 +2,13 @@
 
 	* libseahorse/seahorse-context.c: Fixed seahorse_context_get_key which
 	would always return NULL (bug# 154206)
+	* libseahorse/seahorse-signatures.c: Cleaned up signature code 
+	* libseahorse/seahorse-libdialogs.h:
+	* libseahorse/seahorse-signatures.c: 
+	* src/main.c:
+	* src/seahorse-key-manager.c:
+	* src/seahorse-windows.h: Better exiting of the process. Previously 
+	in some cases seahorse would keep running hidden.
 	
 2004-10-05	Amanpreet Singh Alam <amanpreetalam@yahoo.com>
 
